--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <title>Dine Out - Restaurant</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/Project 4- Webshala/css/font-awesome.css">
-  <link rel="stylesheet" href="/Project 4- Webshala/css/aos.css">
-  <link rel="stylesheet" href="/Project 4- Webshala/css/style.css">
+  <link rel="stylesheet" href="/css/font-awesome.css">
+  <link rel="stylesheet" href="/css/aos.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
       <div class="row justify-content-between align-items-center
       ">
         <div class="logo">
-          <a href="#"><img src="/Project 4- Webshala/img/logo.png" alt="logo"></a>
+          <a href="#"><img src="./img/logo.png" alt="logo"></a>
         </div>
         <button type="button" class="nav-toggler">
           <span></span>
@@ -83,7 +83,7 @@
         <div class="about-img" data-aos="fade-left">
           <div class="img-box">
             <h3>20+ years experience</h3>
-            <img src="img/about-img.jpg" alt="about img">
+            <img src="./img/about-img.jpg" alt="about img">
           </div>
         </div>
       </div>
@@ -409,8 +409,8 @@
   </footer>
   <!-- footer end -->
 
-  <script src="/Project 4- Webshala/js/aos.js"></script>
-  <script src="/Project 4- Webshala/js/script.js"></script>
+  <script src="./js/aos.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
