--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <title>Dine Out - Restaurant</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/css/font-awesome.css">
-  <link rel="stylesheet" href="/css/aos.css">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/DineOut-Restaurant/css/font-awesome.css">
+  <link rel="stylesheet" href="/DineOut-Restaurant/css/aos.css">
+  <link rel="stylesheet" href="/DineOut-Restaurant/css/style.css">
 </head>
 
 <body>
@@ -409,8 +409,8 @@
   </footer>
   <!-- footer end -->
 
-  <script src="./js/aos.js"></script>
-  <script src="./js/script.js"></script>
+  <script src="/DineOut-Restaurant/js/aos.js"></script>
+  <script src="/DineOut-Restaurant/js/script.js"></script>
 </body>
 
 </html>
